# taling_django_advanced

table-bookings/: .gitignore  Dockerfile  pyproject.toml
table-bookings/table_bookings/office/: models.py  urls.py
table-bookings/table_bookings/office/migrations/: 0001_initial.py
table-bookings/table_bookings/office/views/: booking.py  permission.py  restaurant.py
table-bookings/table_bookings/table_bookings/: config.py  middleware.py  settings.py  urls.py
table-bookings/table_bookings/web/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py
table-bookings/table_bookings/web/migrations/: 0001_initial.py  0002_userverification.py  0003_alter_userverification_key.py  0004_userprofile_verified.py  0005_alter_userverification_verified_at.py  0006_restaurant_restaurantimage_restaurant_main_image_and_more.py  0007_category_alter_restaurant_address_and_more.py  0008_recommendation.py  0009_alter_restauranttable_weekday.py  0010_rename_restaurnattable_restauranttable.py  0011_availableseat_booking_payhistory.py  0012_alter_userprofile_nickname.py  0013_review_booking_review.py  0014_alter_restaurant_address_alter_restaurant_category_and_more.py
table-bookings/table_bookings/web/static/: search.js
table-bookings/table_bookings/web/templates/: common.html  error.html  search_bar.html
table-bookings/table_bookings/web/templates/email/: verification.html
table-bookings/table_bookings/web/templates/history/: list.html
table-bookings/table_bookings/web/templatetags/: booking_tags.py  search_tags.py
table-bookings/table_bookings/web/views/: booking.py  history.py  main.py  restaurant.py  reviews.py  users.py
(+25 files in other folders)
