[tool.poetry]
name = "table-bookings"
version = "0.1.0"
description = ""
authors = ["himanmenGit <study.himanmen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
mysqlclient = "^2.1.0"
django-environ = "^0.8.1"
Pillow = "^9.1.1"
django-ses = "^3.1.0"
django-allauth = "^0.51.0"
django-debug-toolbar = "^3.4.0"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
